--- a/episode_3/lang/fr/text/abschnitt_25/loca.csv
+++ b/episode_3/lang/fr/text/abschnitt_25/loca.csv
@@ -6,7 +6,7 @@ sequences_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_1#2;[The 
 sequences_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_1#3;[He looks tired and weak, but works possessed.]
 sequences_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_1#4;[He takes a new photo, looks and freezes.]
 spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_1_st_1_direction;grim satisfaction
-spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_1_st_1;Finally.
+spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_1_st_1;Enfin.
 sequences_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_1#6;[He puts the magnifying glass away as he pleased looks at the photo. Now with the free hand he grabs diagonally behind the nightstand. His hand is looking for the pill bottles.]
 sequences_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_1#7;[The camera moves with his hand. It can be seen that the pills are gone.]
 sequences_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_1#8;[Also the investigator has now noticed that something seems to be not right. Casually, he looks to the bedside table, then he freeze. The pills are gone. Instead, there is a letter there, leaning against the lamp.]
@@ -16,17 +16,17 @@ sequences_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_1#11;[Go 
 sequences_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2#0;[The investigator takes the letter, hesitates a moment, then opens it. He pulls out a folded sheet, opens it, and begins to read.]
 sequences_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2#1;[Cut to the letter.]
 spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2_st_1_direction;reads
-spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2_st_1;Dear Nico, the Raven is dead.
+spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2_st_1;Cher Nico, le Corbeau est mort.
 spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2_st_2_direction;reads
-spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2_st_2;Dear Nico, the Raven is dead.
+spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2_st_2;Cher Nico, le Corbeau est mort.
 spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2_st_3_direction;reads
-spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2_st_3;Yet other criminals live. And they are more brutal and ruthless than he ever was. Who will stop them?
+spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2_st_3;Malgré cela d'autres criminels subsistent. Et ils sont plus violents et impitoyables qu'il ne l'a jamais été. Qui va les arrêter ?
 spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2_st_4_direction;reads
-spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2_st_4;It would be tragic if a good policeman failed to do so because he was hunting for a dead man and ruining himself in the process.
+spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2_st_4;Ce serait tragique si un bon policier refusait de le faire car trop occupé à pourchasser un fantôme et à ruiner sa vie par la même occasion.
 spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2_st_5_direction;reads
-spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2_st_5;Let the dead rest in peace. They are not coming back. R.
+spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2_st_5;Laissez les morts reposer en paix. Ils ne reviendront pas. R.
 spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2_st_6_direction;reads
-spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2_st_6;Let the dead rest in peace. They are not coming back. R.
+spokentexts_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2_st_6;Laissez les morts reposer en paix. Ils ne reviendront pas. R.
 sequences_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2#8;[The investigator thinks about it. The paper still in his hand. Then he lifts the envelope. He has noticed that there is something inside.]
 sequences_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2#9;[He grabs in and pulls out a raven feather.]
 sequences_a25_kabine_ermittler_seq_a25_kabine_ermittler_spielende_teil_2#10;[Cut. Closeup of the face of the investigator.]
