--- a/episode_3/lang/fr/text/abschnitt_23/loca.csv
+++ b/episode_3/lang/fr/text/abschnitt_23/loca.csv
@@ -5,48 +5,48 @@ sequences_a23_duene_seq_a23_duene_twist#0;[A dune. The young woman is sitting on
 sequences_a23_duene_seq_a23_duene_twist#1;[The young woman looks to the sea (idle).]
 sequences_a23_duene_seq_a23_duene_twist#2;[Cut to closeup.]
 sequences_a23_duene_seq_a23_duene_twist#3;[Feets are coming into the picture. She looks up.]
-spokentexts_a23_duene_seq_a23_duene_twist_st_1;Hello there, handsome devil.
+spokentexts_a23_duene_seq_a23_duene_twist_st_1;Bonjour mon joli.
 sequences_a23_duene_seq_a23_duene_twist#5;[The Arab sits next to her in the wind, gives her a kiss.]
-spokentexts_a23_duene_seq_a23_duene_twist_st_2;Hey there, pretty lady.
+spokentexts_a23_duene_seq_a23_duene_twist_st_2;Salut beauté.
 sequences_a23_duene_seq_a23_duene_twist#7;[The Arab continues to kiss, but she pulls away.]
-spokentexts_a23_duene_seq_a23_duene_twist_st_3;Don't. My father will be here any moment.
-spokentexts_a23_duene_seq_a23_duene_twist_st_4;Did you tell him about our engagement?
+spokentexts_a23_duene_seq_a23_duene_twist_st_3;Non. Mon père sera là d'un instant à l'autre.
+spokentexts_a23_duene_seq_a23_duene_twist_st_4;Lui as-tu pas parlé de nos fiançailles ?
 spokentexts_a23_duene_seq_a23_duene_twist_st_5_direction;from the off
-spokentexts_a23_duene_seq_a23_duene_twist_st_5;She did.
+spokentexts_a23_duene_seq_a23_duene_twist_st_5;Elle l'a fait.
 sequences_a23_duene_seq_a23_duene_twist#11;[Cut to Ohi, who is standing behind them.]
 sequences_a23_duene_seq_a23_duene_twist#12;[Ohi is behind the two, both are turning around while sitting.]
 spokentexts_a23_duene_seq_a23_duene_twist_st_6_direction;slightly reproachful
-spokentexts_a23_duene_seq_a23_duene_twist_st_6;I almost slipped out of character.
-spokentexts_a23_duene_seq_a23_duene_twist_st_7;Oh, Daddy... We all know that'd never happen. You were Anton Jakob Zellner through and through - even with the world crashing down around you.
+spokentexts_a23_duene_seq_a23_duene_twist_st_6;J'ai failli sortir de mon rôle.
+spokentexts_a23_duene_seq_a23_duene_twist_st_7;Oh, Papa... Nous savons tous que c'est impossible. Tu étais Anton Jakob Zellner d'un bout à l'autre, même avec le monde en perdition autour de toi.
 sequences_a23_duene_seq_a23_duene_twist#15;[As she talks, the young woman stretched out his hand inviting Ohi. He takes the hand, and sits down with the two.]
 spokentexts_a23_duene_seq_a23_duene_twist_st_8_direction;satisfied
-spokentexts_a23_duene_seq_a23_duene_twist_st_8;Didn't go too badly, did it?
-spokentexts_a23_duene_seq_a23_duene_twist_st_9;Well, Inch nearly blew us up and I was almost charged with murder.
+spokentexts_a23_duene_seq_a23_duene_twist_st_8;Ça ne s'est pas trop mal passé, n'est-ce pas ?
+spokentexts_a23_duene_seq_a23_duene_twist_st_9;Eh bien, Inch nous a presque fait tous exploser et j'ai failli être accusé de meurtre.
 spokentexts_a23_duene_seq_a23_duene_twist_st_10_direction;happy
-spokentexts_a23_duene_seq_a23_duene_twist_st_10;Ah, yes-exciting, wasn't it?
-spokentexts_a23_duene_seq_a23_duene_twist_st_11;I haven't had fun like that since I retired.
+spokentexts_a23_duene_seq_a23_duene_twist_st_10;Ah, oui. Excitant, non ?
+spokentexts_a23_duene_seq_a23_duene_twist_st_11;Je ne m'étais pas autant amusé depuis que j'ai pris ma retraite.
 spokentexts_a23_duene_seq_a23_duene_twist_st_12_direction;serious, somewhat reproachfully
-spokentexts_a23_duene_seq_a23_duene_twist_st_12;Dr. Gebhardt nearly killed you!
-spokentexts_a23_duene_seq_a23_duene_twist_st_13;No one could have seen that coming. At least we managed to clear things up quickly.
-spokentexts_a23_duene_seq_a23_duene_twist_st_14;I would have preferred it if things went according to the old plan. We'd have swapped the jewel aboard the ship and Alex wouldn't have been kidnapped by Inch.
-spokentexts_a23_duene_seq_a23_duene_twist_st_15;And I'd have preferred it if you hadn't given me a nasty bump on my noggin!
+spokentexts_a23_duene_seq_a23_duene_twist_st_12;Le Dr Gebhardt vous a presque tué !
+spokentexts_a23_duene_seq_a23_duene_twist_st_13;Personne ne pouvait prévoir ça. Au moins nous sommes parvenus à remettre les choses en place rapidement.
+spokentexts_a23_duene_seq_a23_duene_twist_st_14;J'aurais préféré que tout se passe comme prévu initialement. Nous aurions échangé les joyaux à bord du navire et Alex n'aurait pas été kidnappée par Inch.
+spokentexts_a23_duene_seq_a23_duene_twist_st_15;Et j'aurais préféré ne pas recevoir une sale bosse sur ma tête !
 spokentexts_a23_duene_seq_a23_duene_twist_st_16_direction;offended
-spokentexts_a23_duene_seq_a23_duene_twist_st_16;And what would your excuse have been for staying on board if I hadn't? Hey, I improvised.
-spokentexts_a23_duene_seq_a23_duene_twist_st_17;Hmm. Good point.
+spokentexts_a23_duene_seq_a23_duene_twist_st_16;Et quelle aurait été votre excuse pour rester à bord ? Hé, j'ai improvisé.
+spokentexts_a23_duene_seq_a23_duene_twist_st_17;Hmm. Bien vu.
 sequences_a23_duene_seq_a23_duene_twist#26;[The young woman leans against Ohis shoulder. The Arab begins to open a champagne bottle and filles three glasses.]
-spokentexts_a23_duene_seq_a23_duene_twist_st_18;I was afraid Inch would realize that you were wearing a bulletproof vest.
-spokentexts_a23_duene_seq_a23_duene_twist_st_19;"He was too confident. After he foiled your ""plan"", he thought he had everything under control."
-spokentexts_a23_duene_seq_a23_duene_twist_st_20;He never really took a look at the emerald in the display case. He just assumed that they shipped the real jewel from Switzerland.
-spokentexts_a23_duene_seq_a23_duene_twist_st_21;And after my little tussle with Inch, we had both jewels.    
-spokentexts_a23_duene_seq_a23_duene_twist_st_22;He blew half the museum to smithereens just to steal a fake.
-spokentexts_a23_duene_seq_a23_duene_twist_st_23;He was always rude and insolent. I never should have worked with him. His double-dealing cost his brother's life...
-spokentexts_a23_duene_seq_a23_duene_twist_st_24;And his own as well.
-spokentexts_a23_duene_seq_a23_duene_twist_st_25;I'd still rather see him in jail than in a morgue.
+spokentexts_a23_duene_seq_a23_duene_twist_st_18;J'avais peur qu'Inch ne découvre que tu portais un gilet pare-balles.
+spokentexts_a23_duene_seq_a23_duene_twist_st_19;"Il était trop sûr de lui. Après avoir fait échouer votre ""plan"", il pensait contrôler parfaitement la situation."
+spokentexts_a23_duene_seq_a23_duene_twist_st_20;Il n'a jamais observé correctement l'émeraude dans la vitrine. Il a simplement supposé qu'ils avaient envoyé le vrai joyau depuis la Suisse.
+spokentexts_a23_duene_seq_a23_duene_twist_st_21;Et après ma petite échauffourée avec Inch, nous possédions les deux joyaux.    
+spokentexts_a23_duene_seq_a23_duene_twist_st_22;Il a réduit la moitié du musée en miettes pour voler une copie.
+spokentexts_a23_duene_seq_a23_duene_twist_st_23;Il a toujours été impoli et insolent. Je n'aurais jamais dû travailler avec lui. Son double-jeu a coûté sa vie à son frère...
+spokentexts_a23_duene_seq_a23_duene_twist_st_24;Et la sienne également.
+spokentexts_a23_duene_seq_a23_duene_twist_st_25;J'aurais tout de même préféré le voir finir derrière les barreaux plutôt qu'à la morgue.
 sequences_a23_duene_seq_a23_duene_twist#35;[The Arab gives the wife and Ohi one glass of champagn. They take it, the woman sits up straight.]
-spokentexts_a23_duene_seq_a23_duene_twist_st_26;He shouldn't have messed with the Raven.
+spokentexts_a23_duene_seq_a23_duene_twist_st_26;Il n'aurait jamais dû se frotter au Corbeau.
 sequences_a23_duene_seq_a23_duene_twist#37;[The Arab takes his own glass in hand, they raise the glasses.]
-spokentexts_a23_duene_seq_a23_duene_twist_st_27;To your retirement!
-spokentexts_a23_duene_seq_a23_duene_twist_st_28;To the future!
+spokentexts_a23_duene_seq_a23_duene_twist_st_27;À ta retraite !
+spokentexts_a23_duene_seq_a23_duene_twist_st_28;À l'avenir !
 sequences_a23_duene_seq_a23_duene_twist#40;[They begin to empty their glasses.]
 sequences_a23_duene_seq_a23_duene_twist#41;[Cut back. The three figures on the dune in front of the sea.]
 sequences_a23_duene_seq_a23_duene_twist#42;[End of section.]
