--- a/episode_3/lang/fr/text/abschnitt_22/loca.csv
+++ b/episode_3/lang/fr/text/abschnitt_22/loca.csv
@@ -74,7 +74,7 @@ sequences_a22_rabennest_seq_a22_rabennest_ankunft#1;[The Arab quietly climbs the
 spokentexts_a22_rabennest_seq_a22_rabennest_ankunft_st_1;Comment avez-vous fait ? Comment avez-vous déposé le message sur le coffre à bord du train ? Comment saviez-vous que Gebhardt avait tué la Baronne ?
 sequences_a22_rabennest_seq_a22_rabennest_ankunft#4;[The Arab takes short breath, and gets back his power. Then he raises the gun, gets up and moves cautiously toward them.]
 spokentexts_a22_rabennest_seq_a22_rabennest_ankunft_st_2;Et les explosifs sous la salle au trésor. Comment... comment avez-vous réussi tout ça ? Même si votre bras n'est pas handicapé...
-spokentexts_a22_rabennest_seq_a22_rabennest_ankunft_st_3;Oh, Il l'est. Croyez moi.
+spokentexts_a22_rabennest_seq_a22_rabennest_ankunft_st_3;Oh, il l'est. Croyez moi.
 spokentexts_a22_rabennest_seq_a22_rabennest_ankunft_st_4;J'ai eu besoin d'aide, c'est exact. Un coursier pour remplacer mes bras et mes jambes.
 sequences_a22_rabennest_seq_a22_rabennest_ankunft#8;[Now, Ohi and the Butler notes the Arab and turns around to face him.]
 spokentexts_a22_rabennest_seq_a22_rabennest_ankunft_st_5;Un coursier ?
@@ -166,12 +166,12 @@ spokentexts_a23_duene_seq_a23_duene_twist_st_7;Oh, Papa... Nous savons tous que 
 sequences_a23_duene_seq_a23_duene_twist#15;[As she talks, the young woman stretched out his hand inviting Ohi. He takes the hand, and sits down with the two.]
 spokentexts_a23_duene_seq_a23_duene_twist_st_8_direction;satisfied
 spokentexts_a23_duene_seq_a23_duene_twist_st_8;Ça ne s'est pas trop mal passé, n'est-ce pas ?
-spokentexts_a23_duene_seq_a23_duene_twist_st_9;Eh bien, Inch nous a presque fait tous exploser et j'ai failli être accusé de meurtre.
+spokentexts_a23_duene_seq_a23_duene_twist_st_9;Eh bien, Inch nous a presque tous fait exploser et j'ai failli être accusé de meurtre.
 spokentexts_a23_duene_seq_a23_duene_twist_st_10_direction;happy
 spokentexts_a23_duene_seq_a23_duene_twist_st_10;Ah, oui. Excitant, non ?
 spokentexts_a23_duene_seq_a23_duene_twist_st_11;Je ne m'étais pas autant amusé depuis que j'ai pris ma retraite.
 spokentexts_a23_duene_seq_a23_duene_twist_st_12_direction;serious, somewhat reproachfully
-spokentexts_a23_duene_seq_a23_duene_twist_st_12;Le Dr Gebhardt vous a presque tué !
+spokentexts_a23_duene_seq_a23_duene_twist_st_12;Le Dr Gebhardt t'a presque tué !
 spokentexts_a23_duene_seq_a23_duene_twist_st_13;Personne ne pouvait prévoir ça. Au moins nous sommes parvenus à remettre les choses en place rapidement.
 spokentexts_a23_duene_seq_a23_duene_twist_st_14;J'aurais préféré que tout se passe comme prévu initialement. Nous aurions échangé les joyaux à bord du navire et Alex n'aurait pas été kidnappée par Inch.
 spokentexts_a23_duene_seq_a23_duene_twist_st_15;Et j'aurais préféré ne pas recevoir une sale bosse sur ma tête !
