--- a/episode_3/lang/fr/text/abschnitt_23/loca.csv
+++ b/episode_3/lang/fr/text/abschnitt_23/loca.csv
@@ -21,12 +21,12 @@ spokentexts_a23_duene_seq_a23_duene_twist_st_7;Oh, Papa... Nous savons tous que 
 sequences_a23_duene_seq_a23_duene_twist#15;[As she talks, the young woman stretched out his hand inviting Ohi. He takes the hand, and sits down with the two.]
 spokentexts_a23_duene_seq_a23_duene_twist_st_8_direction;satisfied
 spokentexts_a23_duene_seq_a23_duene_twist_st_8;Ça ne s'est pas trop mal passé, n'est-ce pas ?
-spokentexts_a23_duene_seq_a23_duene_twist_st_9;Eh bien, Inch nous a presque fait tous exploser et j'ai failli être accusé de meurtre.
+spokentexts_a23_duene_seq_a23_duene_twist_st_9;Eh bien, Inch nous a presque tous fait exploser et j'ai failli être accusé de meurtre.
 spokentexts_a23_duene_seq_a23_duene_twist_st_10_direction;happy
 spokentexts_a23_duene_seq_a23_duene_twist_st_10;Ah, oui. Excitant, non ?
 spokentexts_a23_duene_seq_a23_duene_twist_st_11;Je ne m'étais pas autant amusé depuis que j'ai pris ma retraite.
 spokentexts_a23_duene_seq_a23_duene_twist_st_12_direction;serious, somewhat reproachfully
-spokentexts_a23_duene_seq_a23_duene_twist_st_12;Le Dr Gebhardt vous a presque tué !
+spokentexts_a23_duene_seq_a23_duene_twist_st_12;Le Dr Gebhardt t'a presque tué !
 spokentexts_a23_duene_seq_a23_duene_twist_st_13;Personne ne pouvait prévoir ça. Au moins nous sommes parvenus à remettre les choses en place rapidement.
 spokentexts_a23_duene_seq_a23_duene_twist_st_14;J'aurais préféré que tout se passe comme prévu initialement. Nous aurions échangé les joyaux à bord du navire et Alex n'aurait pas été kidnappée par Inch.
 spokentexts_a23_duene_seq_a23_duene_twist_st_15;Et j'aurais préféré ne pas recevoir une sale bosse sur ma tête !
