--- a/episode_3/lang/fr/text/abschnitt_17/loca.csv
+++ b/episode_3/lang/fr/text/abschnitt_17/loca.csv
@@ -169,7 +169,7 @@ spokentexts_a17_zelle_nagel_ex_1_st_1;Un assez grand clou en acier. Je l'ai sort
 spokentexts_a17_zelle_nagel_used_mit_becher_st_1;Hmm. Si je pouvais marteler le clou, il pourrait probablement s'adapter au trou de la serrure. Mais j'aurais besoin d'un marteau et d'une enclume pour cela. La tasse ne suffira pas.
 texts_a17_zelle_scharniere_mo_ex_1__2;Examiner la charnière
 texts_a17_zelle_scharniere_mo_use_1;Appuyer sur la cheville de la charnière
-texts_a17_zelle_scharniere_mo_used_mit_nagel;Appuyer sur le boulon de la charnière avec le clou
+texts_a17_zelle_scharniere_mo_used_mit_nagel;Appuyer sur la cheville de la charnière avec le clou
 spokentexts_a17_zelle_scharniere_ex_1_st_1;Comme tout le reste sur ce bateau, les barreaux et les charnières commencent a dater.
 spokentexts_a17_zelle_scharniere_ex_1_st_2;Mais ils sont encore beaucoup trop solide pour me permettre d'enfoncer la porte.
 spokentexts_a17_zelle_scharniere_ex_2_st_1;De conception très simple. Une cheville métallique relie la porte au cadre...
