--- a/episode_2/lang/fr/text/common/credits.xml
+++ b/episode_2/lang/fr/text/common/credits.xml
@@ -10,6 +10,10 @@
 			<name value="Pitiben" />
 			<name value="Smash15195" />
 		</function>
+		<function value="L'extinction des Corbeaux">
+			<name value="Nimo" />
+			<name value="Smash15195" />
+		</function>
 		<function value="Correction / Relecture">
 		<name value="-CeD-" />
 		<name value="Nimo" />
